kubernetes/k3s-prod-a/jellyfin/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: jellyfin-cache
              mountPath: /cache
            - name: jellyfin-config
              mountPath: /config
            - name: jellyfin-movies
              mountPath: /movies
            - name: jellyfin-shows
              mountPath: /shows
      volumes:
        - name: jellyfin-cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: jellyfin-movies
          persistentVolumeClaim:
            claimName: jellyfin-movies
            readOnly: true
        - name: jellyfin-shows
          persistentVolumeClaim:
            claimName: jellyfin-shows
            readOnly: true
