kubernetes/k3s-prod-a/jellyfin/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: docker.io/jellyfin/jellyfin:10.9.11@sha256:efc2f4ebef76f0e8d3ea49c87b4c61c7d8847e496dc1fd5a91ce6652e33c116f
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: jellyfin-cache
              mountPath: /cache
            - name: jellyfin-config
              mountPath: /config
            - name: jellyfin-movies
              mountPath: /movies
            - name: jellyfin-shows
              mountPath: /shows
      volumes:
        - name: jellyfin-cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: jellyfin-movies
          persistentVolumeClaim:
            claimName: jellyfin-movies
            readOnly: true
        - name: jellyfin-shows
          persistentVolumeClaim:
            claimName: jellyfin-shows
            readOnly: true
