kubernetes/k3s-prod-a/jellyfin/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  type: ClusterIP
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
  selector:
    app: jellyfin
