kubernetes/k3s-prod-a/jellyfin/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.l.47fc5c.com`)
      kind: Rule
      services:
        - name: jellyfin
          kind: Service
          port: 8096
          scheme: http
  tls:
    secretName: jellyfin-certificate
